Inserindo headers das páginas e pequenas correções

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--SweetAlert2-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!--Icone da página-->
-    <link rel="shortcut icon" href="img/logo.png">
+    <link rel="shortcut icon" href="/img/logo.png">
 </head>
 <body>
     <!--Header-->
@@ -35,7 +35,7 @@
     <h2 id="produtos">Produtos</h2>
     <section id="cards">
         <div class="card_home">
-            <p>Bicileta</p>
+            <p>Bicicleta</p>
             <img src="./img/bicilceta1.png">
             <span>R$1999,99</span>
             <a>Comprar</a>
