--- a/pages/login.html
+++ b/pages/login.html
@@ -5,8 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="/img/logo.png">
 </head>
 <body>
+    <!--Header-->
+    <header id="menu">
+        <div id="logo_titulo">
+            <img src="/img/logo.png" alt="logo">
+            <h3>BikeCity</h3>
+        </div>
+        <nav id="menu_nav">
+            <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/pages/sobre.html">Sobre</a></li>
+                <li><a href="/pages/contato.html">Contato</a></li>
+                <li><a href="/pages/login.html">Login</a></li>
+            </ul>
+        </nav>
+    </header>
     <!--Espaço para fazer o Login-->
 
     <!--Botão de Login-->
