--- a/index.html
+++ b/index.html
@@ -52,6 +52,24 @@
             <span>R$56,99</span>
             <a>Comprar</a>
         </div>
+        <div class="card_home">
+            <p>Kit de Luzes</p>
+            <img src="./img/luzes.png">
+            <span>R$29,99</span>
+            <a>Comprar</a>
+        </div>
+        <div class="card_home">
+            <p>Farol Bike</p>
+            <img src="./img/farol.png">
+            <span>R$159,99</span>
+            <a>Comprar</a>
+        </div>
+        <div class="card_home">
+            <p>Cesta para Bicicleta</p>
+            <img src="./img/cesta.png">
+            <span>R$34,99</span>
+            <a>Comprar</a>
+        </div>
     </section>
     <footer>
         <h4>@2024 - Todos os direitos reservados a LANE</h4>
