--- a/pages/contato.html
+++ b/pages/contato.html
@@ -24,7 +24,33 @@
         </nav>
     </header>
     <!--Formulário para contato-->
+    <section id="contato-container">
 
+        <!-- Titulo Contato -->
+        <h3 id="title-contato">Contato</h3>
+
+        <!-- Nome Completo -->
+        <div class="campo-contato">
+            <input type="text" placeholder="Nome Completo" id="nome-completo">
+        </div>
+
+        <!-- Email -->
+        <div class="campo-contato">
+            <input type="text" placeholder="Email" id="email">
+        </div>
+
+        <!-- Telefone -->
+        <div class="campo-contato">
+            <input type="text" placeholder="Telefone" id="telefone">
+        </div>
+
+        <!-- Interesse -->
+        <div class="campo-contato">
+            <input type="text" placeholder="Interesse" id="interesse">
+        </div>
+
+        <button id="btn-enviar" onclick="enviarFormulario()">Enviar</button>
+    </section>
     <!--Nome, Telefone e email são necessários-->
     
     <!--Botão de Envio-->
