Atualizando a página de contato

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -24,36 +24,38 @@
         </nav>
     </header>
     <!--Formulário para contato-->
-    <section id="contato-container">
+    <div class="caixa">
+        <section id="contato-container">
 
-        <!-- Titulo Contato -->
-        <h3 id="title-contato">Contato</h3>
+            <!-- Titulo Contato -->
+            <h3 id="title-contato">Contato</h3>
 
-        <!-- Nome Completo -->
-        <div class="campo-contato">
-            <input type="text" placeholder="Nome Completo" id="nome-completo">
-        </div>
+            <!-- Nome Completo -->
+            <div class="campo-contato">
+                <input type="text" placeholder="Nome Completo" id="nome-completo">
+            </div>
 
-        <!-- Email -->
-        <div class="campo-contato">
-            <input type="text" placeholder="Email" id="email">
-        </div>
+            <!-- Email -->
+            <div class="campo-contato">
+                <input type="text" placeholder="Email" id="email">
+            </div>
 
-        <!-- Telefone -->
-        <div class="campo-contato">
-            <input type="text" placeholder="Telefone" id="telefone">
-        </div>
+            <!-- Telefone -->
+            <div class="campo-contato">
+                <input type="text" placeholder="Telefone" id="telefone">
+            </div>
 
-        <!-- Interesse -->
-        <div class="campo-contato">
-            <input type="text" placeholder="Interesse" id="interesse">
-        </div>
+            <!-- Interesse -->
+            <div class="campo-contato">
+                <input type="text" placeholder="Interesse" id="interesse">
+            </div>
 
-        <button id="btn-enviar" onclick="enviarFormulario()">Enviar</button>
-    </section>
+            <button id="btn-enviar" onclick="enviarFormulario()">Enviar</button>
+        </section>
+    </div>
     <!--Nome, Telefone e email são necessários-->
     
     <!--Botão de Envio-->
-    <script src="../script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
