Criando a estrutura e começando o css da página SOBRE

--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -48,17 +48,18 @@
                 <h2>2 - Qual a parte da bicicleta onde as marchas são trocadas?</h2>
                 <div class="alternativa">
                     <input type="radio" name="q1" value="a" id="q1-a">
-                    <label for="q1a">Freio.</label>
+                    <label for="q1-a">Freio.</label>
                 </div>
                 <div class="alternativa">
                     <input type="radio" name="q1" value="b" id="q1-b">
-                    <label for="q1b">Pedal.</label>
+                    <label for="q1-b">Pedal.</label>
                 </div>
                 <div class="alternativa">
                     <input type="radio" name="q1" value="c" id="q1-c">
-                    <label for="q1c">Câmbio.</label>
+                    <label for="q1-c">Câmbio.</label>
                 </div>
             </form>
+            
             
             <form class="perguntas">
                 <h2>3 - Qual dessas partes ajuda a parar o pneu traseiro?</h2>
