--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -24,13 +24,15 @@
             </nav>
         </header>
         <!--Sobre-->
-            <div id="sobre" class="card_sobre">
-                <!--Texto do sobre!-->
-                <h2 id="sobre_titulo">Sobre a empresa:</h2>
-                <p id="sobre_texto">Bem-vindo à nossa empresa de bicicletas, onde cada pedalada não é apenas um passeio, mas uma jornada em direção à felicidade e saúde. Aqui, acreditamos que cada giro dos pedais não só fortalece os músculos, mas também os laços de relacionamento. Nossa missão é proporcionar momentos de alegria e bem-estar em duas rodas, incentivando um estilo de vida ativo e sustentável. Junte-se a nós nessa jornada, onde cada trajeto é uma oportunidade para criar memórias duradouras e construir conexões profundas. Pedale conosco e descubra um novo caminho para a felicidade!</p>
-            </div>
-            <!--Colocar uma foto boa do homem com a bicicleta!-->
-            <div id="sobre_imagem">
-                <img src="" alt="Homem de Bike">
-            </div>
+            <section id="sobre-pag">
+                <div class="card_sobre">
+                    <!--Texto do sobre!-->
+                    <h2 id="sobre_titulo">Sobre Nós</h2>
+                    <p id="sobre_texto">Bem-vindo ao nosso site de bicicletas, onde cada pedalada não é apenas um passeio, mas uma jornada em direção à felicidade e saúde. Aqui, acreditamos que cada giro dos pedais não só fortalece os músculos, mas também os laços de relacionamento. Nossa missão é proporcionar momentos de alegria e bem-estar em duas rodas, incentivando um estilo de vida ativo e sustentável. Junte-se a nós nessa jornada, onde cada trajeto é uma oportunidade para criar memórias duradouras e construir conexões profundas. Pedale conosco e descubra um novo caminho para a felicidade!</p>
+                </div>
+                <!--Colocar uma foto boa do homem com a bicicleta!-->
+                <div id="sobre_imagem">
+                    <img src="" alt="Homem de Bike">
+                </div>
+            </section>
     </html>
