Adicionando o footer nas páginas

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -53,7 +53,11 @@
         <div class="botao">
             <button id="btn-enviar" onclick="enviarFormulario()">Enviar</button>
         </div>
-    </section> 
+    </section>
+    <!--Rodapé do site-->
+    <footer>
+        <h4>@2024 - Todos os direitos reservados a LANE</h4>
+    </footer> 
     <!--Botão de Envio-->
     <script src="../script.js"></script>
 </body>
