--- a/pages/login.html
+++ b/pages/login.html
@@ -42,6 +42,10 @@
                 <button onclick="efetuarLogin()" id="btn-login">LOGIN</button>
             </div>
     </section>
+    <!--Rodapé do site-->
+    <footer>
+        <h4>@2024 - Todos os direitos reservados a LANE</h4>
+    </footer>
     <!--JavaScript Externo-->
     <script src="../script.js"></script>
     <!--SweetAlert2-->
