--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -185,6 +185,10 @@
             <button onclick="concluirQuiz()" id="submit">Enviar</button>
         </div>
     </section>
+    <!--Rodapé do site-->
+    <footer>
+        <h4>@2024 - Todos os direitos reservados a LANE</h4>
+    </footer>
     <!--JavaScript Externo-->
     <script src="../script.js"></script>
     <!--SweetAlert2-->
