--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="/img/logo.png">
 </head>
-    <body>
+    <body id="sobre-pag">
         <!--Header-->
         <header id="menu">
             <div id="logo_titulo">
@@ -24,7 +24,7 @@
             </nav>
         </header>
         <!--Sobre-->
-            <section id="sobre-pag">
+            <section id="sobre-section">
                 <div class="card_sobre">
                     <!--Texto do sobre!-->
                     <h2 id="sobre_titulo">Sobre Nós</h2>
@@ -35,4 +35,9 @@
                     <img src="" alt="Homem de Bike">
                 </div>
             </section>
-    </html>
+            <!--Rodapé do site-->
+            <footer>
+                <h4>@2024 - Todos os direitos reservados a LANE</h4>
+            </footer>
+    </body> 
+</html>
