--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <a>Comprar</a>
         </div>
     </section>
+    <!--Rodapé do site-->
     <footer>
         <h4>@2024 - Todos os direitos reservados a LANE</h4>
     </footer>
