Adicionando imagem ao sobre

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -32,7 +32,7 @@
                 </div>
                 <!--Colocar uma foto boa do homem com a bicicleta!-->
                 <div id="sobre_imagem">
-                    <img src="" alt="Homem de Bike">
+                    <img src="../img/homem_bicicleta.png" alt="Homem de Bike" id="img-sobre">
                 </div>
             </section>
             <!--Rodapé do site-->
