--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -16,10 +16,10 @@
             </div>
             <nav id="menu_nav">
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/pages/sobre.html">Sobre</a></li>
-                    <li><a href="/pages/contato.html">Contato</a></li>
-                    <li><a href="/pages/login.html">Login</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="./sobre.html">Sobre</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
+                    <li><a href="./login.html">Login</a></li>
                 </ul>
             </nav>
         </header>
