Arrumando o caminho das imagens

--- a/pages/login.html
+++ b/pages/login.html
@@ -11,7 +11,7 @@
     <!--Header-->
     <header id="menu">
         <div id="logo_titulo">
-            <img src="/img/logo.png" alt="logo">
+            <img src="../img/logo.png" alt="logo">
             <h3>BikeCity</h3>
         </div>
         <nav id="menu_nav">
