--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="/img/logo.png">
+    <link rel="shortcut icon" href="../img/logo.png">
 </head>
     <body id="sobre-pag">
         <!--Header-->
         <header id="menu">
             <div id="logo_titulo">
-                <img src="/img/logo.png" alt="logo">
+                <img src="../img/logo.png" alt="logo">
                 <h3>BikeCity</h3>
             </div>
             <nav id="menu_nav">
