--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="/img/logo.png">
+    <link rel="shortcut icon" href="../img/logo.png">
     <!--SweetAlert2-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
@@ -13,7 +13,7 @@
     <!--Header-->
     <header id="menu">
         <div id="logo_titulo">
-            <img src="/img/logo.png" alt="logo">
+            <img src="../img/logo.png" alt="logo">
             <h3>BikeCity</h3>
         </div>
         <nav id="menu_nav">
