--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--SweetAlert2-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!--Icone da página-->
-    <link rel="shortcut icon" href="/img/logo.png">
+    <link rel="shortcut icon" href="./img/logo.png">
 </head>
 <body>
     <!--Header-->
